// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionMenu Link matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-accordion-menu__subsection"
  >
    <a
      class="nhsuk-accordion-menu__subsection-link"
    >
      Test
    </a>
  </div>
</div>
`;

exports[`AccordionMenu Section matches snapshot 1`] = `
<div>
  <details
    class="nhsuk-accordion-menu__section"
  >
    <summary
      class="nhsuk-accordion-menu__section-summary"
      role="tab"
      tabindex="1"
    >
      <span
        class="nhsuk-accordion-menu__section-summary-text"
      >
        TestHeading
      </span>
      <svg
        aria-hidden="true"
        class="nhsuk-accordion-menu__icon"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="16"
          cy="16"
          fill="#ffffff"
          r="16"
        />
        <path
          d="M16 8v16M8 16h16"
          fill="none"
          stroke="#003087"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="4"
        />
      </svg>
    </summary>
  </details>
</div>
`;

exports[`AccordionMenu matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-accordion-menu"
  />
</div>
`;
